--- a/InsuranceReportGeneration/src/main/resources/application.properties
+++ b/InsuranceReportGeneration/src/main/resources/application.properties
@@ -12,3 +12,14 @@ spring.jpa.show-sql=true
 
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=saharukhkhan111000@gmail.com
+spring.mail.password=zuwbeycuvstblgag
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
